--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,15 @@
+@import url('http://fonts.cdnfonts.com/css/gilroy-bold');
+
+
 /*Colours*/
 :root {
     --black: #171719;
     --purple: #5731EF;
 }
 
-*, *::after, **::before {
+*,
+*::after,
+**::before {
     -webkit-box-sizing: border-box !important;
     -moz-box-sizing: border-box !important;
     -ms-box-sizing: border-box !important;
@@ -17,16 +22,31 @@ body {
     padding: 0;
     overflow-x: hidden;
     scroll-behavior: smooth;
-    font: 'Gilroy', sans-serif;
+    font-family: 'Gilroy-Light', sans-serif;
     background-color: var(--black);
     color: #fff;
 }
+h1{
+    font-family: 'Gilroy-Bold', sans-serif;
+    font-size: 2.5rem;
+    margin-bottom: 0;
+}
+h2{
+    font-family: 'Gilroy-Regular', sans-serif;
+    font-size: 1.5rem;
+}
+p{
+    line-height: 1.5rem;
+    font-size: 1rem;
+}
+
 
 /*Navbar*/
 .nav-super {
     position: fixed;
     background-color: var(--black);
     width: 100%;
+ 
 }
 
 .navbar {
@@ -57,25 +77,32 @@ body {
 .nav-logo {
     height: 30px;
 }
-.mobile-bars{
+
+.mobile-bars {
     display: none;
 }
 
 /*Home section*/
 .container {
     padding: 15vh 10vw 5vh 10vw;
-    height: 80vh;
+    min-height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#animated-icon {
-    width: 40%;
+.mic {
+    width: 30%;
+    padding: 0 5%;
 }
 
 #home-text {
-    width: 60%;
+    width: 45%;
+    padding: 0 10% 0 5%;
+}
+
+.desk-icon {
+    height: 8rem;
 }
 
 .desk-icon,
@@ -96,18 +123,93 @@ body {
     margin-right: 2rem;
 }
 
+/*About section*/
+.episodes, .about{
+    margin: 0 5vw 5vh 5vw;
+    box-shadow: 0px 9px 128px rgba(0, 0, 0, 0.38), 0px 3.75998px 53.4753px rgba(0, 0, 0, 0.273165), 0px 2.01027px 28.5905px rgba(0, 0, 0, 0.226521), 0px 1.12694px 16.0276px rgba(0, 0, 0, 0.19), 0px 0.598509px 8.51213px rgba(0, 0, 0, 0.153479), 0px 0.249053px 3.54209px rgba(0, 0, 0, 0.106835);
+}
+.about {
+    margin: 0 5vw 5vh 5vw;
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+}
+
+.group {
+    width: 45%;
+    object-fit: cover;
+}
+
+.about-text {
+    padding: 0 5%;
+    width: 45%;
+    align-self: center;
+}
+/*Episodes*/
+.card{
+    margin-top: 2rem;
+    padding: 2rem;
+    box-shadow: 0px 22px 222px rgba(0, 0, 0, 0.27), 0px 6.63236px 66.9265px rgba(0, 0, 0, 0.15421), 0px 2.75474px 27.7978px rgba(0, 0, 0, 0.116897), 0px 0.996336px 10.0539px rgba(0, 0, 0, 0.0845258);
+}
+.episodes{
+    padding: 5%;
+}
+.episodes>h1{
+    margin-top: 0;
+}
+.extend>h2, .extend>i{
+    display: inline;
+}
+.extend>i{
+    float: right;
+}
+.extend:hover, .extend-small:hover, .play:hover{
+    cursor: pointer;
+}
+.extend-small{
+    text-align: center;
+    display: none;
+}
+.card>p:nth-child(1){
+    margin-top: 0;
+}
+
+.play{
+    background-color: var(--purple);
+    display: inline-block;
+    padding:5px 1rem;
+    margin-right: 1rem;
+}
+.play-btn >p ,
+.play-time{
+    display: inline;
+}
+.play-btn>i{
+    margin-right: 0.5rem;
+}
+.extend-small{
+    margin-top: 1em;
+}
+
 
 /*Media Queries*/
 
 @media (max-width: 1084px) {
     .home-icon {
         margin-right: 1rem;
+        height: 35px;
+    }
+    p{
+        font-size: 0.9rem;
     }
 }
 
 @media (max-width: 992px) {
     .home-icon {
         height: 30px;
+    }
+    p{
+        font-size: 0.8rem;
     }
 }
 
@@ -121,7 +223,8 @@ body {
         display: none;
     }
 
-    .mobile-icon, .mobile-bars {
+    .mobile-icon,
+    .mobile-bars {
         display: block;
     }
 
@@ -129,32 +232,69 @@ body {
     #home-text {
         width: 100%;
     }
+
+    #home-text {
+        margin-top: 2rem;
+    }
+
     .navbar {
         display: block;
     }
-    .nav-logo, .mobile-bars{
+
+    .nav-logo,
+    .mobile-bars {
         padding-top: rem;
         height: 25px;
     }
-    .nav-logo{
+
+    .nav-logo {
         position: absolute;
         z-index: 99;
         left: 50%;
-        transform:translateX(-50%);
+        transform: translateX(-50%);
     }
-    .nav-link{
+
+    .nav-link {
         display: block;
         padding: 1rem 0;
         text-align: center;
         width: 100%;
     }
-    .nav-list{
+
+    .nav-list {
         width: 100%;
         padding: 0;
     }
-    .navbar{
+
+    .navbar {
         padding: 0.5rem 1rem;
     }
+
+    .mic {
+        width: 250px;
+        max-width: 90%;
+        padding: 0 5%;
+    }
+    .about{
+        display: block;
+    }
+    .group {
+        width: 100%;
+       }
+    
+    .about-text {
+        width: 90%;
+    }
+    .extend>i{
+        display: none;
+    }
+    .extend-small{
+        display: block;
+    }
+    .episodes{
+border-bottom: 5px solid var(--purple);
+    }
+    
 }
 
 
