--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,7 +51,7 @@ p {
     position: fixed;
     background-color: var(--black);
     width: 100%;
-
+    z-index: 99;
 }
 
 .navbar {
@@ -59,6 +59,8 @@ p {
     justify-content: space-between;
     padding: 0 2rem;
     align-items: center;
+    background-color: var(--black);
+
 }
 
 .nav-list {
@@ -222,8 +224,9 @@ p {
 }
 .footer-one{
     width: 30%;
+    position: relative;
 }
-.footer-one>img{
+.full-logo{
     width: 320px;
     max-width: 100%;
 }
@@ -236,12 +239,12 @@ p {
 .footer-one, .footer-two{
     padding: 5%;
 }
-.socials>a, .f-about>a, .links>a{
+.socials-text>a, .f-about>a, .links>a{
     text-decoration: none;
     color: white;
 }
 
-.socials>a{
+.socials-text>a{
     display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
@@ -249,12 +252,22 @@ p {
     margin-inline-end: 0px;
     text-align: left;
 }
-.socials>a>i{
+.socials-text>a>i{
     margin-right: 5px;
 }
-.socials>a>p{
+.socials-text>a>p{
     display: inline;
     line-height: 1.5rem;
+}
+.full-logo-center{
+    display: none;
+    width: 200px;
+    margin: auto;
+}
+.mwl{
+    position: absolute;
+    bottom: 10%;
+  
 }
 
 
@@ -347,6 +360,9 @@ p {
     .about {
         display: block;
     }
+    .about-text{
+        padding-bottom: 5%;
+    }
 
     .group {
         width: 100%;
@@ -367,8 +383,45 @@ p {
     .episodes {
         border-bottom: 5px solid var(--purple);
     }
+    .full-logo{
+        display: none;
+    }
+    .full-logo-center{
+        display: block;
+    }
+    #footer{
+        display: block;
+    }
+    .mwl{
+        position: relative;
+        margin-top: 1.5rem;
+    }
+    .footer-one{
+        width: 90%;
+        text-align: center;
+        padding-bottom: 0;
+    }
+   
+    .footer-two{
+       flex-direction: column;
+        width: 90%;
+     
+    }
+    p{
+        line-height: 1.2rem;
+    }
 
+    .f-about{
+        display: none;
+    }
+    .socials>h2{
+        margin-top: 0;
+    }
+    .socials-text{
+        display: inline-block;
+    }
 }
+
 
 
 
