added date parameter to card

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
             <h1>Episodes</h1>
             {% for i in range(len-1,-1,-1) %}
                 <div class="card">
-                    <p>12 NOV 2020</p>
+                    <p>{{dates[i]}}</p>
                     <div class="extend">
                         <h2>
                             {{ titles[i] }}
