--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
                     <a href="#episodes">Episodes</a>
                 </li>
                 <li class="nav-link">
-                    <a href="#subscribe">Subscribe</a>
+                    <a href="https://anchor.fm/dsc-vit/episodes/Introducing-DSC-Afterhours-elalj4">Subscribe</a>
                 </li>
             </ul>
         </nav>
@@ -90,20 +90,20 @@
         <div class="episodes">
             <h1>Episodes</h1>
             {% for i in range(len-1,-1,-1) %}
-                <div class="card">
-                    <p>{{dates[i]}}</p>
-                    <div class="extend">
-                        <h2>
-                            {{ titles[i] }}
-                        </h2>
-                        <i class="fas fa-chevron-down fa-2x chevron"></i>
-                    </div>
-                    <p class="extend-text">
-                        {{ descs[i] }}
+                    <div class="card">
+                        <p>{{dates[i]}}</p>
+                        <div class="extend">
+                            <h2>
+                                {{ titles[i] }}
+                            </h2>
+                            <i class="fas fa-chevron-down fa-2x chevron"></i>
+                        </div>
+                        <p class="extend-text">
+                            {{ descs[i] }}
 
-                    </p>
-                    <iframe src={{links[i]}} height="140px" width="100%" frameborder="0" scrolling="no"></iframe>
-                </div>
+                        </p>
+                        <iframe src={{links[i]}} height="100%" width="100%" frameborder="0" scrolling="no"></iframe>
+                    </div>
             {% endfor %}
 
         </div>
@@ -121,23 +121,23 @@
             <span class="socials">
                 <h2>Social</h2>
                 <div class="socials-text">
-                    <a href="">
+                    <a href="https://www.instagram.com/dscvitvellore/">
                         <i class="fab fa-instagram"></i>
                         <p>Instagram</p>
                     </a>
-                    <a href="">
+                    <a href="https://twitter.com/dscvit">
                         <i class="fab fa-twitter"></i>
                         <p>
                             Twitter
                         </p>
                     </a>
-                    <a href="">
+                    <a href="https://www.linkedin.com/company/dscvit">
                         <i class="fab fa-linkedin"></i>
                         <p>
                             LinkedIn
                         </p>
                     </a>
-                    <a href="">
+                    <a href="https://www.facebook.com/dscvitvellore">
                         <i class="fab fa-facebook"></i>
                         <p>
                             Facebook
@@ -149,34 +149,34 @@
             </span>
             <span class="f-about">
                 <h2>About Us</h2>
-                <a href="">
+                <a href="https://dscvit.com/">
                     <p>Our Website</p>
                 </a>
-                <a href="">
+                <a href="https://github.com/GDGVIT">
                     <p>GitHub</p>
                 </a>
-                <a href="">
+                <a href="https://medium.com/gdg-vit">
                     <p>Medium</p>
                 </a>  
             </span>
             <span class="links">
                 <h2>Links</h2>
-                <a href="">
+                <a href="https://open.spotify.com/show/3N03C8MuIQPSqqGZp8XF56">
                     <p>Spotify</p>
                 </a>
-                <a href="">
+                <a href="https://podcasts.apple.com/us/podcast/id1536768786">
                     <p>Apple Podcasts</p>
                 </a>
-                <a href="">
+                <a href="https://pca.st/m1y1rnmy">
                     <p>Pocket Casts</p>
                 </a>
-                <a href="">
+                <a href="https://podcasts.google.com/feed/aHR0cHM6Ly9hbmNob3IuZm0vcy8zYzU1YTVmMC9wb2RjYXN0L3Jzcw==">
                     <p>Google Podcasts</p>
                 </a>
-                <a href="">
+                <a href="https://overcast.fm/itunes1536768786/dsc-afterhours">
                     <p>Overcast</p>
                 </a>
-                <a href="">
+                <a href="https://radiopublic.com/dsc-afterhours-WoL3jR">
                     <p>RadioPublic</p>
                 </a>
             </span>
