--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -131,6 +131,12 @@ p {
 
 .home-icon {
     margin-right: 2rem;
+    color: white;
+  
+}
+.home-icons{
+    display: flex;
+    text-decoration: none;
 }
 
 /*About section*/
@@ -296,6 +302,9 @@ p {
 }
 
 @media (max-width: 768px) {
+    .home-icons{
+        justify-content: center;
+    }
     .container {
         display: block;
         text-align: center;
