podcast links on home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,13 +52,18 @@
                     journey in tech, learn new things, have fun and impart knowledge in the process.
                 </p>
                 <div class="home-icons">
-                    <img src="../static/assets/icons/Vectoricon1.svg" alt="social" class="home-icon">
-                    <img src="../static/assets/icons/Vectoricon2.svg" alt="social" class="home-icon">
-                    <img src="../static/assets/icons/Vectoricon3.svg" alt="social" class="home-icon">
-                    <img src="../static/assets/icons/Vectoricon4.svg" alt="social" class="home-icon">
-                    <img src="../static/assets/icons/Vectoricon5.svg" alt="social" class="home-icon">
-                    <img src="../static/assets/icons/Vectoricon6.svg" alt="social" class="home-icon">
-                </div>
+                    <a href="https://open.spotify.com/show/3N03C8MuIQPSqqGZp8XF56">
+                        <img src="../static/assets/icons/Vectoricon2.svg" alt="social" class="home-icon"></a>
+                    <a href="https://podcasts.apple.com/us/podcast/id1536768786">
+                        <img src="../static/assets/icons/Vectoricon1.svg" alt="social" class="home-icon"></a>
+                    <a href="https://pca.st/m1y1rnmy">
+                        <img src="../static/assets/icons/Vectoricon3.svg" alt="social" class="home-icon"></a>
+                    <a href="https://podcasts.google.com/feed/aHR0cHM6Ly9hbmNob3IuZm0vcy8zYzU1YTVmMC9wb2RjYXN0L3Jzcw==">
+                        <img src="../static/assets/icons/Vectoricon4.svg" alt="social" class="home-icon"></a>
+                    <a href="https://overcast.fm/itunes1536768786/dsc-afterhours">
+                        <img src="../static/assets/icons/Vectoricon6.svg" alt="social" class="home-icon"></a>
+                    <a href="https://radiopublic.com/dsc-afterhours-WoL3jR">
+                        <img src="../static/assets/icons/Vectoricon5.svg" alt="social" class="home-icon"></a>                </div>
 
             </div>
 
