--- a/templates/index.html
+++ b/templates/index.html
@@ -43,8 +43,15 @@
     </div>
     <section id="home">
         <div class="container">
-            <img src="../static/assets/img/illustrationmic.svg" alt="mic" class="mic">
-            <div id="home-text">
+            <div class="circle-container">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <img src="../static/assets/img/Groupmic.svg" alt="dsc" class="micro">
+    
+            </div>            <div id="home-text">
                 <img src="../static/assets/img/Vectorlogo_large.svg" alt="afterhours" class="desk-icon">
                 <img src="../static/assets/img/Vectorlogo_small.svg" alt="afterhours" class="mobile-icon">
                 <p class="home-desc">
@@ -187,6 +194,7 @@
             </span>
         </div>
     </section>
+   
 
 
     <!--Scripts-->
