--- a/templates/index.html
+++ b/templates/index.html
@@ -21,12 +21,14 @@
 <body>
     <div class="nav-super">
         <nav class="navbar">
-            <span>
-                <a href="#home">
-                    <img src="../static/assets/img/DSCWhitedsc.svg" alt="dsc" class="nav-logo">
-                </a>
-            </span>
-            <img src="../static/assets/icons/Vectorbars.svg" alt="menu" class="mobile-bars">
+            <div class="mob-bars">
+                <span>
+                    <a href="#home">
+                        <img src="../static/assets/img/DSCWhitedsc.svg" alt="dsc" class="nav-logo">
+                    </a>
+                </span>
+                <img src="../static/assets/icons/Vectorbars.svg" alt="menu" class="mobile-bars">    
+            </div>
 
             <ul class="nav-list">
                 <li class="nav-link ">
