--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
     </div>
     <section id="home">
         <div class="container">
-            <img src="../static/assets/img/illustrationmic.svg" alt="mic" class="mic">
+            <div id='animated-icon'></div>
             <div id="home-text">
                 <img src="../static/assets/img/Vectorlogo_large.svg" alt="afterhours" class="desk-icon">
                 <img src="../static/assets/img/Vectorlogo_small.svg" alt="afterhours" class="mobile-icon">
@@ -188,6 +188,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="../static/assets/js/index.js"></script>
+    <script src='../static/assets/js/animation.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.4/lottie.min.js" integrity="sha512-m0RQU4SBx0p/bLwRiI4fJBGRafVLZ4s86wRe1+OAx5EXbcWiS/X1jvYdJQRD8jOoIVl+WTyVeMawUWVCh1O8+Q==" crossorigin="anonymous"></script>
 </body>
 
 </html>
