center mobile icons + descreased mobile headings

--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -374,13 +374,18 @@ p {
     .home-icon {
         height: 30px;
     }
-
     p {
         font-size: 0.8rem;
     }
 }
 
 @media (max-width: 768px) {
+    h1{
+        font-weight: 700;
+    }
+    .home-icons{
+        justify-content: center;
+    }
     .container {
         display: block;
         text-align: center;
@@ -407,7 +412,6 @@ p {
 
     .navbar {
         display: block;
-        position: relative;
     }
 
     .nav-logo,
