--- a/templates/index.html
+++ b/templates/index.html
@@ -45,15 +45,8 @@
     </div>
     <section id="home">
         <div class="container">
-            <div class="circle-container">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <img src="../static/assets/img/Groupmic.svg" alt="dsc" class="micro">
-    
-            </div>            <div id="home-text">
+                <div id='animated-icon'></div>
+                <div id="home-text">
                 <img src="../static/assets/img/Vectorlogo_large.svg" alt="afterhours" class="desk-icon">
                 <img src="../static/assets/img/Vectorlogo_small.svg" alt="afterhours" class="mobile-icon">
                 <p class="home-desc">
@@ -203,6 +196,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="../static/assets/js/index.js"></script>
+    <script src="../static/assets/js/animation.js"></script>
+    
 </body>
 
 </html>
