anchor-card-loader

--- a/templates/index.html
+++ b/templates/index.html
@@ -109,6 +109,20 @@
                             {{ descs[i] }}
 
                         </p>
+                        <div class="block">
+                            <div class="album">
+                                <div class="artwork">
+                                   
+                                    <ul class="bars">
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                         <iframe src={{links[i]}} height="100%" width="100%" frameborder="0" scrolling="no"></iframe>
                     </div>
             {% endfor %}
