--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -594,3 +594,92 @@ p {
 .hide {
     display: none;
 }
+
+
+/*equaliser*/
+.block{
+    position: relative;
+}
+.album {
+
+    position: absolute;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    height: 160px;
+    width: 100%;
+    margin: auto;
+    background-color: var(--black);
+  
+  }
+  
+  .artwork {
+    margin: auto;
+  }
+  
+  .bars {
+      margin: 0;
+      padding: 0;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+    -webkit-align-items: flex-end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    height: 160px;
+    list-style: none;
+  }
+  .bars li {
+    width: 2.5vw;
+    height: 100px;
+    margin: 0 .35vw;
+   
+    -webkit-animation: equaliser 1s linear infinite;
+            animation: equaliser 1s linear infinite;
+  }
+  .bars li:nth-child(1) {
+    background: var(--purple);
+    -webkit-animation-delay: 0s;
+            animation-delay: 0s;
+    opacity: 30%;
+  }
+  .bars li:nth-child(2) {
+    background:  var(--purple);
+    opacity: 40%;
+    -webkit-animation-delay: 0.25s;
+            animation-delay: 0.25s;
+  }
+  .bars li:nth-child(3) {
+    background:  var(--purple);
+    opacity: 50%;
+    -webkit-animation-delay: 0.50s;
+            animation-delay: 0.50s;
+  }
+  .bars li:nth-child(4) {
+    opacity: 40%;
+    background:  var(--purple);
+    -webkit-animation-delay: 0.75s;
+            animation-delay: 0.75s;
+  }
+  .bars li:nth-child(5) {
+    opacity: 30%;
+    background:  var(--purple);
+    -webkit-animation-delay: 1s;
+            animation-delay: 1s;
+  }
+  
+  @-webkit-keyframes equaliser {
+    50% {
+      height: 2.5vw;
+    }
+  }
+  
+  @keyframes equaliser {
+    50% {
+      height: 2.5vw;
+    }
+  }
+ 
