--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,19 @@
 </head>
 
 <body>
+    <div id="loader">
+        <div class="loader-body">
+            <div class="circle-container">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <img src="../static/assets/img/Groupmic.svg" alt="dsc" class="micro">
+    
+            </div>  
+        </div>
+    </div>
     <div class="nav-super">
         <nav class="navbar">
             <div class="mob-bars">
